--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ version = "0.0.3"
 authors = ["Shaun Gillies <me@shaungillies.org>"]
 license = "MIT"
 readme = "README.md"
-repository = "https://github.com/shaungillies/cli"
-homepage = "https://github.com/shaungillies/cli"
+repository = "https://github.com/shaungillies/clt"
+documentation = "https://docs.rs/clt/"
 description = "Rust crate for efficiently creating command line applications."
 
 [dependencies]
